// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI/Spin should render Spin with size l 1`] = `
<div
  className="spinContainer"
>
  <SimpleComposeWrapper [position:center],[view:default]
    progress={true}
    size="l"
    view="default"
  />
</div>
`;

exports[`UI/Spin should render default Spin 1`] = `
<div
  className="spinContainer"
>
  <SimpleComposeWrapper [position:center],[view:default]
    progress={true}
    size="m"
    view="default"
  />
</div>
`;

exports[`UI/Spin should render progress Spin 1`] = `
<div
  className="spinContainer"
>
  <SimpleComposeWrapper [position:center],[view:default]
    progress={true}
    size="m"
    view="default"
  />
</div>
`;

exports[`UI/Spin shoult render Spin with children 1`] = `
<div
  className="spinContainer"
>
  <SimpleComposeWrapper [position:center],[view:default]
    progress={true}
    size="m"
    view="default"
  >
    Children
  </SimpleComposeWrapper [position:center],[view:default]>
</div>
`;
